Commit des fichier globeaux au site.

--- a/css/page-liste.css
+++ b/css/page-liste.css
@@ -10,7 +10,10 @@
   div {
   }
   .liste-kayak{
-      
+    display: flex;
+    align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   }
   .kayak{
 
