#9 V2 barre de recherche

--- a/css/page-liste.css
+++ b/css/page-liste.css
@@ -27,7 +27,8 @@
 
   .barre-recherche{
     display: flex;
-    margin-left:40%;
+   justify-content: center;
+    margin-top:15px;
   }
 
   .barre-recherche > button {
