--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,11 +2,15 @@
     margin: 0;
     padding: 0;
   }
+body{
+  background-color: #c98328;
+}
 .header {
     text-align: left;
     background: #ffbd08;
     color: white;
     font-size: 30px;
+    padding-bottom: 5px;
   }
   ul {
     list-style-type: none;
@@ -16,10 +20,6 @@
     background-color: #ffbd08;
   }
   
-  li {
-    float: left;
-    border-right:1px solid #bbb;
-  }
   
   li:last-child {
     border-right: none;
@@ -41,18 +41,23 @@
     background-color: #04AA6D;
   }
 
-  p {
-    border:solid 1px black; margin:5px; padding:5px;
-  }
-  div {
-    border:solid 1px black; margin:5px; padding:5px;
-  }
-
+.image{
+   width: 400px;
+   height:auto;
+}
   footer{
     background: #ffbd08;
     color: white;
-    position: relative;
+    position: fixed;
+    left: 0;
+    bottom: 0;
     margin-bottom:0px;
     width: 100%;
     z-index: 2000;
   }
+.footer-link{
+  text-decoration: none;
+    background-color: transparent;
+    color: white;
+}
+
