--- a/css/page-liste.css
+++ b/css/page-liste.css
@@ -7,16 +7,11 @@
     bottom: 20%;
     left: 22%;
 }
-  div {
-  }
   .liste-kayak{
     display: flex;
     align-items: center;
   flex-wrap: wrap;
   justify-content: center;
-  }
-  .kayak{
-
   }
 
   .resume {
@@ -60,4 +55,46 @@
   }
   .btn-primary{
     background: #ffbd08;
+  }
+
+  /* Pour la page annonce  */
+  .AnnonceConfirmation{
+    display: flex;
+    flex-direction: column;
+    background-color: #e9d8a9; 
+    height: 100%;
+    width: 50%;
+    align-items: center;
+    margin-top: 25px;
+    
+   }
+   .Centre{
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 100%;
+   }
+   .titreConfirmation{
+     font-size: 25px;
+   }
+   textarea {
+    width: 300px;
+    height: 150px;
+  }
+  .container{
+    margin-right: 2%;
+    margin-left: 2%;
+    margin-bottom: 2%;
+    border: 2px;
+    border: solid 2px rgb(194, 191, 167);
+  }
+  .message-bienvenue{
+    color: #fff;
+    align-items: center;
+    font-size: large;
+  }
+
+  .zone-bienvenue{
+    display: flex;
+    justify-content: center;
   }
