--- a/css/page-annonce.css
+++ b/css/page-annonce.css
@@ -1,26 +1,39 @@
 .kayak > .resume{
-    position: relative;
-    border:solid 1px black; margin:5px; padding:5px;
+    
     background-color:aquamarine;
     width: 50%;
     height: 15%;
     bottom: 20%;
     left: 22%;
 }
-  div {
-  }
-  .liste-kayak{
-    display: flex;
-    align-items: center;
-  flex-wrap: wrap;
+
+.kayak > .info-kayak{ 
+  display: flex;
   justify-content: center;
-  }
-  .kayak{
+  color:white;
+  font-size: 20px;
+}
 
-  }
+.kayak > .info-titre{  
+  display: flex;
+  justify-content: center;
+  color:rgb(85, 84, 61);
+  font-weight: bold;
+  font-size: 500%;
+}
 
-  .resume {
-  }
+.choix-kayak{
+  display: flex;
+  justify-content: center;
+}
+
+.kayak > .image{ 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
   .renseignement{
     border:solid 1px black; margin:5px; padding:5px;
+  }
+  .resume {
   }
