--- a/css/membre.css
+++ b/css/membre.css
@@ -66,3 +66,79 @@
   .groupe-inscription{
     display: flex;  
   }
+
+  .chat {
+    width: 400px;
+    height: 400px;
+    background-color: #ffcb3d;
+    align-self: center;
+    margin-left: 35%;
+    overflow: scroll;
+    scroll-snap-align: end;
+    
+}
+.messageBox{
+    width: 400px;
+    height: 50px;
+    background-color: #ffcb3d;
+    align-self: center;
+    margin-left: 35%;
+}
+.informationsBox{
+    width: 400px;
+    height: 50px;
+    background-color: #ffcb3d;
+    align-self: center;
+    margin-left: 35%;
+    margin-top: 5%;
+}
+.bubble{
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+}
+
+.bubble::before {
+    background-color: #F2F2F2;
+    content: "\00a0";
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform:             rotate( 29deg ) skew( -35deg );
+        -moz-transform:    rotate( 29deg ) skew( -35deg );
+        -ms-transform:     rotate( 29deg ) skew( -35deg );
+        -o-transform:      rotate( 29deg ) skew( -35deg );
+        -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+}
+
+.me {
+    background-color: #1d54ec;
+    float: left;   
+    margin: 5px 45px 5px 20px;         
+}
+
+.me::before {
+    background-color: #1d54ec;
+
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    left: -9px;           
+}
+
+.you {
+    float: right;    
+    margin: 5px 20px 5px 45px;         
+}
+
+.you::before {
+    box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4 );
+    right: -9px;    
+}
+
